maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: ';' expected but ')' found.
		gauche());
                        ^